Changed layout of misc.html to be better on mobile.  Also fixed some alignment stuff

--- a/css/site.css
+++ b/css/site.css
@@ -130,15 +130,21 @@ ul
 /* About Page */
 .wrapper
 {
-    font-family: 'Arvo', serif;
+    font-family: 'Roboto Slab', serif; 
     color:#7a7a7a;
 }
 
 .header
 {
+    font-family: 'Roboto Slab', serif;
     width:100%;
     height:90px;
 }  
+
+.content
+{
+    font-family: 'Roboto Slab', serif;   
+}
 
 .header-wrapper
 {
@@ -213,11 +219,12 @@ ul
 {
     margin-left:55%;
 }
+
 .people-list
 {
-    width:80%;
-    height:300px;
-    margin:0px 10%; 
+    width:98%;
+    margin:1%; 
+    height:auto;
 }
 .people-list ul
 {
@@ -228,7 +235,9 @@ ul
 .people-list ul li
 {
     display:inline-block;
-    margin:10px 10px;
+    margin:2.5% 5%;
+    width:10vw;
+    vertical-align: top;
     font-size:.8vw;
 }
 .people-list ul li span
@@ -243,13 +252,17 @@ ul
 }
 .people-list ul li span.head-name
 {
-    font-size:.7vw;
+    font-size:2.25vw;
+}
+
+.people-list ul li span.head-title
+{
+    font-size:1.25vw;
+    font-style:italic;
 }
 
 .headshot
 {
-    width:75px;
-    height:75px;
     border-radius:50%;
     background-color:#e0e0e0;
     line-height:75px;
@@ -257,7 +270,10 @@ ul
     font-size:.7vw;
     cursor:pointer;
     text-align: center;
-    background-size:75px 75px;
+    width: 10vw;
+    height: 10vw;
+    background-repeat: no-repeat;
+    background-size: 100%;
     
 }
 .headshot:hover
@@ -449,7 +465,7 @@ ul
               margin-top: 4%;
               font-size: 18px;
               text-align: center;
-              font-family: 'Arvo', serif;
+              font-family: 'Roboto Slab', serif; 
            	  color: gray;
             }
 
@@ -518,7 +534,7 @@ ul
             height: 30%;
             overflow: hidden;
             font-size: 15px;
-            font-family: 'Arvo', serif;
+            font-family: 'Roboto Slab', serif; 
            	color: gray;
           }
 
@@ -555,7 +571,7 @@ ul
     {
       float: right;
       text-align: right;
-      font-family: 'Arvo', serif;
+      font-family: 'Roboto Slab', serif; 
       color: gray;
     }
 
@@ -831,6 +847,80 @@ ul
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+a {
+  color: inherit;
+  text-decoration: inherit; /* no underline */
+}
+
+.project-content
+{
+    width:84%;
+    margin:8%;
+}
+
+.project-text
+{
+    margin-left:2%;
+    font-size: 1.25vw;
+}
+
+.project-photo
+{
+    float:left;
+    width:30%;
+    padding:2%
+}
+
+.project-val
+{
+    /*font-family:"Helvetica Neue", Arial, sans-serif;*/
+    text-align: justify;
+}
+
+.project-photo img
+{
+    width:80%;
+    margin-left:10%;
+}
+
+#mumblr   { background-image: url(../img/microphone.png);}
+#defendthelounge   { background-image: url(../img/tendies.png);}
+#rumblr   { background-image: url(../img/fist.png);}
+#ptable   { background-image: url(../img/Hydrogen.jpg);}
+
+.main-description
+{
+   font-family: 'Roboto Slab', serif; 
+  color:#7a7a7a;
+    padding:0 8%;
+    font-size:2vw;
+     text-align: justify;
+}
+
+h5
+{
+    font-size:3vw;   
+}
+
+.page-footer
+{
+    font-family: 'Roboto Slab', serif;
+    font-size: 0.5em;
+    width:100%;
+    text-align:center;
+    padding-bottom:2.5%;
+}
 
 
 
@@ -1124,6 +1214,60 @@ ul
         width: 60%;
         height: 60%;
       }
+    
+    /* FORGIVE THE COPY PASTA, SENSEI,
+        BUT IT MUST BE DONE */
+    .people-list
+    {
+        width:90%;
+        margin:5%; 
+        height:auto;
+    }
+    .people-list ul
+    {
+        list-style-type: none;
+        padding:0px;
+        text-align:center;
+    }
+    .people-list ul li
+    {
+        width:30vw;
+        min-width:0px;
+    }
+    .people-list ul li span
+    {
+        width:100%;
+        margin:10px 0px;
+        display:block;
+        color:gray;
+        font-weight:300;
+        font-size:.5vw;
+        text-align:center;
+    }
+    .people-list ul li span.head-name
+    {
+        font-size:5vw;
+    }
+
+    .people-list ul li span.head-title
+    {
+        font-size:3.5vw;
+    }
+
+    .headshot
+    {
+        width: 30vw;
+        height: 30vw;
+        min-width: 0px;
+        min-height: 0px;
+    }
+    
+    .project-photo
+    {
+        float:left;
+        width:45%;
+        padding:2%
+    }
 }
 
 @media all and (max-width:905px)
@@ -1200,6 +1344,8 @@ ul
         width: 60%;
         height: 60%;
       }
+    
+    
 }
 
 @media all and (max-width:805px)
@@ -1547,14 +1693,6 @@ ul
         }
 }
 
-
-@media all and (min-width:1210px)
-{
-    .people-list
-    {
-        height:150px;   
-    }
-}
 @media all and (min-width:678px)
 {
     .people-list
@@ -1564,46 +1702,4 @@ ul
 }
 
 
-a {
-  color: inherit;
-  text-decoration: inherit; /* no underline */
-}
 
-.project-content
-{
-    height:680px;
-    width:84%;
-    margin:0 8%;
-}
-
-.project-content div
-{   
-    float:left;
-    
-}
-.project-photo
-{
-    height:100%;
-    width:45%;
-}
-
-.project-photo img
-{
-    width:80%;
-    margin:0 10%;
-    margin-top:20%;
-}
-
-#mumblr   { background-image: url(../img/microphone.png);}
-#defendthelounge   { background-image: url(../img/tendies.png);}
-#rumblr   { background-image: url(../img/fist.png);}
-#ptable   { background-image: url(../img/Hydrogen.jpg);}
-
-.main-description
-{
-   font-family: 'Arvo', serif;
-  color:#7a7a7a;
-    padding:0 8%;
-    font-size:2vw;
-     text-align: justify;
-}
